Add displacement option for variable and also possibility to nest variable to existing structure by specifying its existing parent id (node path).